fixed padding issue with skills - words were too close to border

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -22,6 +22,7 @@
 
 .skills {
   font-size: 16px;
+  padding: 0 15px 15px 15px;
 }
 
 .topNav{
